syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message EnvironmentVariable {
  string name = 1;
  string value = 2;
}
