syntax = "proto2";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_enum_prefix_all) = true;

message ImageLayer {
  enum Type {
    Shared = 0;
    Exclusive = 1;
  }

  optional string name = 1 [(gogoproto.jsontag) = "name,omitempty"];
  optional string url = 2;
  optional string destination_path = 3;
  optional Type layer_type = 4;
  optional string media_type = 5;
  optional string digest_algorithm = 6 [(gogoproto.jsontag) = "digest_algorithm,omitempty"];
  optional string digest_value = 7[(gogoproto.jsontag) = "digest_value,omitempty"];
}
