syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message PortRange {
  uint32 start = 1;
  uint32 end = 2;
}

message ICMPInfo {
  int32 type = 1;
  int32 code = 2;
}

message SecurityGroupRule {
  string protocol = 1 [(gogoproto.jsontag) = "protocol,omitempty"];
  repeated string destinations = 2;
  repeated uint32 ports = 3;
  PortRange port_range = 4;
  ICMPInfo icmp_info = 5;
  bool log = 6 [(gogoproto.jsontag) = "log"];
  repeated string annotations = 7 [(gogoproto.jsontag) = "annotations,omitempty"];
}
