syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "actions.proto";
import "environment_variables.proto";
import "security_group.proto";
import "cached_dependency.proto";
import "volume_mount.proto";
import "network.proto";
import "certificate_properties.proto";
import "image_layer.proto";

option (gogoproto.goproto_enum_prefix_all) = true;

message TaskDefinition {
  string root_fs = 1 [(gogoproto.jsontag) = "rootfs"];
  repeated EnvironmentVariable environment_variables = 2 [(gogoproto.jsontag) = "env,omitempty"];
  Action action = 3;
  int32 disk_mb = 4;
  int32 memory_mb = 5;
  uint32 cpu_weight = 6;
  bool privileged = 7;
  string log_source = 8;
  string log_guid = 9;
  string metrics_guid = 10;
  string result_file = 11;
  string completion_callback_url = 12 [(gogoproto.jsontag) = "completion_callback_url,omitempty"];
  string annotation = 13 [(gogoproto.jsontag) = "annotation,omitempty"];
  repeated SecurityGroupRule egress_rules = 14 [(gogoproto.jsontag) = "egress_rules,omitempty"];
  repeated CachedDependency cached_dependencies = 15 [(gogoproto.jsontag) = "cached_dependencies,omitempty"];
  string legacy_download_user = 16 [(gogoproto.jsontag) = "legacy_download_user,omitempty", deprecated=true];
  string trusted_system_certificates_path = 17 [(gogoproto.jsontag) = "trusted_system_certificates_path,omitempty"];
  repeated VolumeMount volume_mounts = 18 [(gogoproto.jsontag) = "volume_mounts,omitempty"];
  Network network = 19 [(gogoproto.jsontag) = "network,omitempty"];
  repeated string PlacementTags = 20 [(gogoproto.jsontag) ="placement_tags,omitempty"];
  int32 max_pids = 21;
  CertificateProperties certificate_properties = 22 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "certificate_properties,omitempty"];
  string image_username = 23;
  string image_password = 24;
  repeated ImageLayer image_layers = 25;
}

message Task {
  enum State {
    Invalid = 0;
    Pending = 1;
    Running = 2;
    Completed = 3;
    Resolving = 4;
  }

  TaskDefinition task_definition = 1 [(gogoproto.jsontag) = "", (gogoproto.embed) = true];

  string task_guid = 2;
  string domain = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  int64 first_completed_at = 6;

  State state = 7;

  string cell_id = 8;

  string result = 9;
  bool failed = 10;
  string failure_reason = 11;
  int32 rejection_count = 12 [(gogoproto.jsontag) = "rejection_count"];
  string rejection_reason = 13 [(gogoproto.jsontag) = "rejection_reason"];
}

